--- a/UsluzniObrt.MVC/UsluzniObrt.MVC.csproj
+++ b/UsluzniObrt.MVC/UsluzniObrt.MVC.csproj
@@ -355,8 +355,7 @@
     <Content Include="Views\Order\Checkout.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Admin\Edit.cshtml" />
-    <Content Include="Views\Admin\CategoryCreate.cshtml" />
-    <Content Include="Views\Admin\Category.cshtml" />
+    <Content Include="Views\Admin\CreateCategory.cshtml" />
     <Content Include="Views\Admin\CreateItem.cshtml" />
     <Content Include="Views\Order\MyOrder.cshtml" />
     <Content Include="Views\Shared\_OrderSidebar.cshtml" />
